Adding HTTP handlers for PizzaModel, IsGlutenFree utility method, Binding the model to Pizza, and nav-item to Pizza List

--- a/RazorPages_Pizza/Pages/Pizza.cshtml
+++ b/RazorPages_Pizza/Pages/Pizza.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
-@using RazorPagesPizza.Models
-@model RazorPagesPizza.Pages.PizzaModel
+@using RazorPages_Pizza.Models
+@model RazorPages_Pizza.Pages.PizzaModel
 @{
     ViewData["Title"] = "Pizza List";
 }
