--- a/WebApp/AllpinesSkiCabin/AllpinesSkiCabin/Pages/Privacy.cshtml
+++ b/WebApp/AllpinesSkiCabin/AllpinesSkiCabin/Pages/Privacy.cshtml
@@ -5,4 +5,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Welcome to the AllPines Ski Cabin! &#127794; &#128507; &#127794; </p>
